--- a/public/css/mm/_overview.scss
+++ b/public/css/mm/_overview.scss
@@ -17,6 +17,9 @@
 
 #overview-table {
 
+    height: 100%;
+    overflow: hidden;
+
     tbody tr {
         cursor: pointer;
         color: #666;
