--- a/public/css/mm/main.scss
+++ b/public/css/mm/main.scss
@@ -190,7 +190,9 @@ $marginLarge: 50px;
         .panel-body {
             padding: 5px;
             width: 100%;
-            //            height: calc(100% - 38px);
+            overflow: hidden;
+            position: relative;
+            top: -5px;
         }
 
     }
